MOCKITO CHANGE LOG
==================


Release 2.0.0
---------------------------------
- Calling `thenAnswer()` without arguments is now allowed and is treated like
  `thenReturn()` without arguments: the stubbed method will return `None`.
- Deprecate `verifyNoMoreInteractions` in favor of `ensureNoUnverifiedInteractions`.
- Deprecate `verifyNoUnwantedInteractions` in favor of `verifyExpectedInteractions`.
- Context managers now check usage and any expectations (set via `expect`) on exit. The usage
  check can be disabled with the environment variable `MOCKITO_CONTEXT_MANAGERS_CHECK_USAGE="0"`.
- The `between` matcher now supports open ranges, e.g. `between=(0,)` to assert that at least
  0 interactions occurred.
- Added a first-class `InOrder` API via ``mockito.InOrder`` (also available as
  ``mockito.inorder.InOrder``). The legacy in-order mode only supported one mock at a time;
  the new API supports true cross-mock order verification.

  Migration (old limited style -> new style)::

      # Before (legacy, single-mock order only)
      from mockito import inorder
      inorder.verify(cat).meow()
      inorder.verify(cat).purr()

      # Now (preferred, explicit cross-mock order)
      from mockito import InOrder
      in_order = InOrder(cat, dog)
      in_order.verify(cat).meow()
      in_order.verify(dog).bark()

- The legacy in-order verification mode (``inorder.verify(...)``)
  is deprecated in favor of ``InOrder(...)``.



Release 1.5.5 (November 17, 2025)
---------------------------------

- Improved behavior of the ad-hoc methods of mocks.  (#92)
- Make the shortcut `when(mock).foo().thenReturn()` officially work and just assume
  the user forgot the `None` as return value.



Release 1.5.4 (January 22, 2025)
--------------------------------

- Implement defined behavior for `deepcopy` for mocks.  (#91)



Release 1.5.3 (November 9, 2024)
--------------------------------

- Maintenance release adding support for Python 3.13.


