@@ -27,7 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest numpy 
+          pip install -e .
+          pip install pytest numpy
       - name: Run pytest
         run: pytest
         
@@ -40,12 +41,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+        run: uv sync --frozen --group dev
       - name: Run flake8
-        run: flake8 .
+        run: uv run flake8 .
 
   spellcheck:
     runs-on: ubuntu-latest
@@ -56,12 +57,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install codespell
+        run: uv sync --frozen --group dev
       - name: Run codespell
-        run: codespell
+        run: uv run codespell
 
   type-check:
     runs-on: ubuntu-latest
@@ -72,12 +73,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install mypy
+        run: uv sync --frozen --group dev
       - name: Run mypy
-        run: mypy mockito
+        run: uv run mypy mockito
 
   deploy:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
