@@ -1,26 +1,0 @@
-from setuptools import setup
-
-setup(name='mockito',
-      version='0.0.0',
-      packages=['mockito'],
-      url='https://github.com/kaste/mockito-python',
-      maintainer='herr.kaste',
-      maintainer_email='herr.kaste@gmail.com',
-      license='MIT',
-      description='Spying framework',
-      long_description=open('README.rst').read(),
-      python_requires='>=3.8',
-      classifiers=[
-          'Development Status :: 5 - Production/Stable',
-          'Intended Audience :: Developers',
-          'License :: OSI Approved :: MIT License',
-          'Topic :: Software Development :: Testing',
-          'Programming Language :: Python :: 3',
-          'Programming Language :: Python :: 3.8',
-          'Programming Language :: Python :: 3.9',
-          'Programming Language :: Python :: 3.10',
-          'Programming Language :: Python :: 3.11',
-          'Programming Language :: Python :: 3.12',
-          'Programming Language :: Python :: 3.13',
-          'Programming Language :: Python :: 3.14',
-      ])
